--- a/client/package.json
+++ b/client/package.json
@@ -5,14 +5,18 @@
     "dependencies": {
         "@ant-design/icons": "^4.6.2",
         "@craco/craco": "^6.1.1",
+        "@reach/router": "^1.3.4",
         "@testing-library/jest-dom": "^5.11.4",
         "@testing-library/react": "^11.1.0",
         "@testing-library/user-event": "^12.1.10",
-        "react-router-dom": "^5.2.0",
         "antd": "^4.14.0",
+        "axios": "^0.21.1",
         "craco-less": "^1.17.1",
+        "jwt-decode": "^3.1.2",
         "react": "^17.0.1",
         "react-dom": "^17.0.1",
+        "react-query": "^3.13.0",
+        "react-router-dom": "^5.2.0",
         "react-scripts": "4.0.3",
         "sass": "^1.32.8",
         "web-vitals": "^1.0.1"
