--- a/back/package.json
+++ b/back/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "test": "jest --runInBand --detectOpenHandles --forceExit spec"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
@@ -17,5 +18,11 @@
     "morgan": "~1.9.1",
     "mysql2": "^2.2.5",
     "sequelize": "^6.5.1"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
+    "jest": "^26.6.3",
+    "supertest": "^6.1.3"
   }
 }
