--- a/client/package.json
+++ b/client/package.json
@@ -13,9 +13,11 @@
         "axios": "^0.21.1",
         "craco-less": "^1.17.1",
         "jwt-decode": "^3.1.2",
+        "query-string": "^7.0.0",
         "react": "^17.0.1",
         "react-dom": "^17.0.1",
         "react-query": "^3.13.0",
+        "react-query-devtools": "^2.6.3",
         "react-router-dom": "^5.2.0",
         "react-scripts": "4.0.3",
         "sass": "^1.32.8",
