--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
         "jwt-decode": "^3.1.2",
         "query-string": "^7.0.0",
         "react": "^17.0.1",
+        "react-confetti": "^6.0.1",
         "react-dom": "^17.0.1",
         "react-query": "^3.13.0",
         "react-query-devtools": "^2.6.3",
