--- a/client/package.json
+++ b/client/package.json
@@ -1,54 +1,54 @@
 {
-    "name": "client",
-    "version": "0.1.0",
-    "private": true,
-    "dependencies": {
-        "@ant-design/icons": "^4.6.2",
-        "@craco/craco": "^6.1.1",
-        "@reach/router": "^1.3.4",
-        "@testing-library/jest-dom": "^5.11.4",
-        "@testing-library/react": "^11.1.0",
-        "@testing-library/user-event": "^12.1.10",
-        "antd": "^4.14.0",
-        "axios": "^0.21.1",
-        "craco-less": "^1.17.1",
-        "jwt-decode": "^3.1.2",
-        "query-string": "^7.0.0",
-        "react": "^17.0.1",
-        "react-confetti": "^6.0.1",
-        "react-dom": "^17.0.1",
-        "react-query": "^3.13.0",
-        "react-query-devtools": "^2.6.3",
-        "react-router-dom": "^5.2.0",
-        "react-scripts": "4.0.3",
-        "sass": "^1.32.8",
-        "web-vitals": "^1.0.1"
-    },
-    "scripts": {
-        "start": "craco start",
-        "build": "craco build",
-        "test": "craco test"
-    },
-    "eslintConfig": {
-        "extends": [
-            "react-app",
-            "react-app/jest"
-        ]
-    },
-    "browserslist": {
-        "production": [
-            ">0.2%",
-            "not dead",
-            "not op_mini all"
-        ],
-        "development": [
-            "last 1 chrome version",
-            "last 1 firefox version",
-            "last 1 safari version"
-        ]
-    },
-    "devDependencies": {
-        "@cypress/react": "^4.16.4",
-        "cypress": "^6.8.0"
-    }
+  "name": "client",
+  "version": "0.1.0",
+  "private": true,
+  "dependencies": {
+    "@ant-design/icons": "^4.6.2",
+    "@craco/craco": "^6.1.1",
+    "@reach/router": "^1.3.4",
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^11.1.0",
+    "@testing-library/user-event": "^12.1.10",
+    "antd": "^4.14.0",
+    "axios": "^0.21.1",
+    "craco-less": "^1.17.1",
+    "jwt-decode": "^3.1.2",
+    "query-string": "^7.0.0",
+    "react": "^17.0.1",
+    "react-confetti": "^6.0.1",
+    "react-dom": "^17.0.1",
+    "react-query": "^3.13.0",
+    "react-query-devtools": "^2.6.3",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "4.0.3",
+    "sass": "^1.32.8",
+    "web-vitals": "^1.0.1"
+  },
+  "scripts": {
+    "start": "craco start",
+    "build": "craco build",
+    "test": "cypress open"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
+  "devDependencies": {
+    "@cypress/react": "^4.16.4",
+    "cypress": "^6.8.0"
+  }
 }
