--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "antd": "^4.14.0",
     "axios": "^0.21.1",
     "craco-less": "^1.17.1",
+    "cypress-file-upload": "^5.0.3",
     "jwt-decode": "^3.1.2",
     "query-string": "^7.0.0",
     "react": "^17.0.1",
